# Haskell-book

./: README.md  helloworld.hi
Chapters/1.HelloHaskell/: exerciseHealSick.hs  firstFunction.hs  functionWithLet.hs
Chapters/10. Folding lists/: chapterExerciseRewritingUsingFolds.hs  copyFibonacci.hs  databaseProcessingFoldExercises.hs
Chapters/10.Folding lists/: chapterExerciseConsonantsAndVowels.hs  chapterExerciseCountWords.hs
Chapters/11.Algebraic datatypes/: as-patternsChapterExercise.hs  binaryTreeInsertExample.hs  howDoesYourGardenGrowExercise.hs  huttonRazor.hs  newTypeExercisesLogicGoats.hs  phoneExeciseChapterExercise.hs  programmersExercise.hs  vehicles.hs  vigenereCipherChapterExercise.hs
Chapters/12.Signaling adversity/: binaryTreeAgain.hs  bleatingEither.hs  myIterateMyUnfoldr.hs  onlyNatural.hs  smallLibraryForEither.hs  smallLibraryForMaybe.hs  stringProcessing.hs  validateTheWord.hs
Chapters/13.Building projects/pet projects/hangman/: hangman.cabal
Chapters/13.Building projects/pet projects/hangman/src/: Main.hs
Chapters/14. Testing/pet proyect/addition/: Addition.hs  addition.cabal  package.yaml
Chapters/14. Testing/pet proyect/morse/: morse.cabal
Chapters/14. Testing/pet proyect/morse/src/: Main.hs  Morse.hs
Chapters/14. Testing/pet proyect/morse/tests/: tests.hs
Chapters/15. Monoid, Semigroup/: madLibExercise.hs  monoidPropertiesSpec.hs  optionalMonoidExecise.hs
Chapters/16. Functor/: chapterExercises.hs  flipFunctors.hs  funkshun.hs  heavyLiftingExercises.hs  maybeAndEither.hs
Chapters/17. Applicative/: constantInstanceExercise.hs  identityInstance.hs  lookupFunction.hs  lookupsExercises.hs  usingMaybeApplicative.hs
Chapters/18. Monad/: bindExercise.hs  doToMonad.hs  eitherMonadShortExercise.hs  eitherMonadShortExerciseAgain.hs  examplesOfMonadUse.hs
Chapters/2.HelloHaskell/: functionWithWhere.hs
Chapters/2.Strings/: chapterExercisesExercise3.hs  chapterExercisesExercise5.hs  print3flipped.hs
Chapters/20. Foldable/: foldableInstanceExamples.hs  libraryFunctionsExercises.hs
Chapters/22.Reader/: warmingUpExercise.hs
Chapters/23. State/: stateExampleInFuntional.hs
Chapters/27. Nonstrictness/: outSideIN.hs
Chapters/3.BasicDatatypes/: exercise10.hs  exercise8IsPalindrome.hs  exercise9MyABS.hs  greetIfCool1.hs  moodSwingExercise.hs
Chapters/3.Strings/: print2.hs  topOrLocal.hs
Chapters/4.BasicDatatypes/: correctSyntaxExercise.hs
Chapters/5.Types/: addStuffType.hs  arith3Broken.hs  doesItCompile.hs  monomorphismRestriction.hs  noMonomorphismRestriction.hs  sing.hs  (+4 more)
(+70 files in other folders)
