name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Playing Hangman by haskellbook
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            game
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random, split

