name:                addition
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/bitemyapp/hello#readme
license:             BSD3
license-file:        LICENSE
author:              jonay
maintainer:          example@email.com
copyright:           2016, Your Name Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Addition
  ghc-options:       -Wall -fwarn-tabs
  build-depends:     base >=4.7 && <5, hspec, QuickCheck
  hs-source-dirs:    .
  default-language:  Haskell2010
