cabal-version: 1.12
name:           morse
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/morse#readme>
author:         Author name here
maintainer:     example@example.com
category:       Text
copyright:      2021 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple

library
 exposed-modules:  Morse
 ghc-options:      -Wall -fwarn-tabs
 build-depends:    base >=4.7 && <5, containers, QuickCheck
 hs-source-dirs:   src
 default-language: Haskell2010


executable morse
 main-is:          Main.hs
 ghc-options:      -Wall -fwarn-tabs
 hs-source-dirs:   src
 build-depends:    base >=4.7 && <5, containers, morse, QuickCheck
 default-language: Haskell2010


test-suite tests
 ghc-options:      -Wall -fno-warn-orphans
 type:             exitcode-stdio-1.0
 main-is:          tests.hs
 hs-source-dirs:   tests
 build-depends:    base, containers, morse, QuickCheck
 default-language: Haskell2010
